@@ -4,6 +4,9 @@ History of this buildout
 4.2 (unreleased)
 ----------------
 
+- Replaced remaining getStartdate calls with getStart_time.
+  [maurits]
+
 - Replaced remaining getEnddate calls with get_end_time.
   Merged from 3.28.
   [maurits]
